react rerenders trigger cascading socket connections

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Using sockets to make a real-time chat application",
   "main": "server.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "socket.io": "^2.2.0"
   },
